# ExamMaker

./: .cruft.json  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cookiecutter.yml  dependencies.yml  draft_release.yml  release.yml  test.yml
docs/: api_docs.md
src/exammaker/: builder.py  cli.py  exam.py  json.py  parser.py  question.py  render.py  section.py
tests/: front1.html  front2.html  questions.json  sections.json  test_builder.py  test_cli.py  test_json.py  test_parser.py  test_question.py  test_section.py
